--- a/SefinWeb/GuardiaoWeb/web/WEB-INF/web.xml
+++ b/SefinWeb/GuardiaoWeb/web/WEB-INF/web.xml
@@ -15,7 +15,7 @@
     </context-param>
     <context-param>
         <param-name>primefaces.THEME</param-name>
-        <param-value>blitzer</param-value>
+        <param-value>ui-lightness</param-value>
     </context-param>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
