--- a/SefinWeb/SiafiWeb/web/WEB-INF/web.xml
+++ b/SefinWeb/SiafiWeb/web/WEB-INF/web.xml
@@ -16,7 +16,7 @@
     </context-param>
     <context-param>
         <param-name>primefaces.THEME</param-name>
-        <param-value>blitzer</param-value>
+        <param-value>sunny</param-value>
     </context-param>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
