Ajuste ba tela de login

--- a/SefinWeb/SiafiWeb/src/java/label.properties
+++ b/SefinWeb/SiafiWeb/src/java/label.properties
@@ -1,6 +1,8 @@
 # Nomeclatura pad\u00e3o do sistema
 # Autor Gilm\u00e1rio
 # Projeto SIAFI
-nome.sistema=SIAFI - Sistema de Administra\u00e7\u00e3o Financeira
+nome.prefeitura=Prefeitura Municipal de Santa Quit\u00e9ria
+email.prefeitura=contato@santaquiteria.ce.gov.br
+nome.sistema=Sistema de Administra\u00e7\u00e3o Financeira - SIAFI
 nome.url.sistema=SiafiWeb
 cores = "696969,2F4F4F,708090,000080,6495ED,483D8B,4169E1,1E90FF,00CED1,006400,556B2F,3CB371,7CFC00,BDB76B,CD5C5C,B22222,FF69B4,FF00FF,00E5EE,00EE76,EE6363,CD6600,CD8C95,FF83FA,9F79EE,363636,BCEE68,bc8f8f,a0522d,ff69b4,afeeee,f0e68c,CCCC99,C0C0C0,556B2F,ADD8E6,4682B4,B0C4DE";
